# cay

./: .gitignore  Makefile  README.org  pyproject.toml
src/cay/: cli.py  main.py
test/: test_cay.py
