[tool.poetry]
name = "cay"
version = "0.1.0"
description = "Simple calculator implemented in Python"
authors = ["Naoya Yamashita <conao3@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
cay = "cay.cli:main"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
